# moltui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
archive/: HQ_EXPORT_QUALITY.md  README.md  hq_export_recipe.py  hq_isosurface_algorithms.py  kitty_viewer.py  renderer.py
data/geom/: benzene.inp  benzene_trj.xyz  water.xyz  water.zmat
data/molcas/: n2.inp  n2.scf.molden
data/orca/: h2o.hess  h2o.inp  n2.inp  n2.molden.input
data/pyscf/: benzene.molden  benzene.py  h2o_mo_normal_modes.molden
data/trexio/missing_moenergies/: C2H2.hdf5
data/trexio/n2_sp/: main.py  n2.h5  n2.molden
data/trexio/n2_sp/n2/: ao.txt  basis.txt  electron.txt  metadata.txt  mo.txt  nucleus.txt  pbc.txt
examples/: benzene.xyz  ethanol.xyz  singlet-meta-benzyne.xyz  water.xyz
moltui/: app.py  elements.py  geometry_panel.py  gto.py  image_renderer.py  isosurface.py  mo_panel.py  molden.py  parsers.py  renderer.py
src/moltui/: app.py  elements.py  geometry_panel.py  gto.py  image_renderer.py  mo_panel.py  molden.py  normal_mode_panel.py  parsers.py  selection_table_panel.py  trexio_ao_order.py  trexio_molden.py  trexio_support.py  visual_panel.py
tests/: test_app_export.py  test_app_trexio_mo.py  test_cube_mo_view_mode.py  test_filetype.py  test_geometry_panel.py  test_geometry_tab_navigation.py  test_gto.py  test_integration.py  test_isosurface.py  test_mo_unfocused_navigation.py  test_molden_parser.py  test_normal_mode_navigation.py  test_parsers.py  test_renderer.py  test_selection_table_panel.py  test_tab_focus_disabled.py  test_table_half_page_navigation.py  test_trexio_ao_order.py  test_trexio_parser.py  test_visual_panel_focus.py  test_zmat.py
