[project]
name = "moltui"
version = "0.1.0"
description = "Terminal-based 3D molecular viewer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kalman Szenes", email = "szenes.kalman@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Environment :: Console",
]
dependencies = [
    "numpy>=1.26",
    "scikit-image>=0.22",
    "textual>=3.0",
]

[project.urls]
Homepage = "https://github.com/kszenes/moltui"
Repository = "https://github.com/kszenes/moltui"
Issues = "https://github.com/kszenes/moltui/issues"

[project.optional-dependencies]
molden = ["psutil"]
test = ["pytest>=7.0"]
test-pyscf = ["pytest>=7.0", "pyscf>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
moltui = "moltui.app:run"

[tool.hatch.build.targets.sdist]
exclude = ["archive/", "examples/", "*.png"]

[tool.hatch.build.targets.wheel]
exclude = ["archive/", "examples/", "*.png"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E741"]
